[project]
name = "test-workflow-python-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# We do not have to package our API, so disable packaging.
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
mypy = "^1.18.2"
pytest = "^8.4.2"

