[project]
name = "test-workflow-python-repo"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "requests >=2.31.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# We do not have to package our API, so disable packaging.
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"
mypy = "^1.18.2"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

